[PE-1261] Added margin for details tag to prevent massive spacing out of content

--- a/assets/scss/pages/_risk-triage.scss
+++ b/assets/scss/pages/_risk-triage.scss
@@ -2,6 +2,10 @@
   margin:15px 0 30px 0;
 }
 
+.p60__details {
+  margin:10px 0 0 0;
+}
+
 .your-pay__text {
   margin:0 0 10px 0;
 }
